--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "clean": "rimraf dist",
     "build": "webpack",
-    "prepublish": "npm run clean && npm run lint && npm run build"
+    "prepare": "npm run clean && npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
