Remove license for now

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/amaidah/luxon-business-days.git"
   },
   "author": "Andrew Maidah <a.maidah@gmail.com>",
-  "license": "ISC",
+  "license": "",
   "bugs": {
     "url": "https://github.com/amaidah/luxon-business-days/issues"
   },
