--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "test": "jest",
     "test:watch": "NODE_ENV=test jest --watch --coverage=false",
-    "test:coverage": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --collect-coverage",
     "clean": "rimraf dist",
     "build": "webpack",
     "prepare": "npm run clean && npm run lint && npm run build"
