--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: npm run lint
-      - run: npm run test
+      - run: npm run test:ci
+      - store_artifacts:
+          path: coverage
+
