--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.5
 jobs:
   build:
     docker:
@@ -21,4 +23,6 @@ jobs:
       - run: npm run test:ci
       - store_artifacts:
           path: coverage
+      - codecov/upload:
+          file: coverage/coverage-final.json
 
