update circle image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,20 +4,20 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/node:10
+      - image: cimg/mode:16.15.0
     steps:
       - checkout
 
-      # - restore_cache:
-      #     keys:
-      #     - v1-dependencies-{{ checksum "package.json" }}
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
 
       - run: npm install
 
-      # - save_cache:
-      #     paths:
-      #       - node_modules
-      #     key: v1-dependencies-{{ checksum "package.json" }}
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: npm run lint
       - run: npm run test:ci
