--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/mode:16.15.0
+      - image: circleci/node:16.13.0
     steps:
       - checkout
 
